browser/css/cool.css
/* ... */
.cool-annotation-menu:hover, .cool-annotation-menu-redline:hover, .cool-redline-accept-button:hover, .cool-redline-reject-button:hover {
	border: 1px solid var(--color-border-darker);
}

.cool-annotation-date {
	font-size: var(--default-font-size);
}

.cool-annotation-autosavelabel {
	font-size: var(--default-font-size);
	opacity: 75%;
}

.cool-annotation-menubar {
	margin: 0;
	padding: 0;
	vertical-align: top;
}

.cool-annotation-child-line {
	border-style: none none dashed dashed;
	border-width: thin;
	border-color: black;
}
/*Tooltips
----------------------------------*/
[data-title]:hover:after {
	padding: 7px 9px;
	font-size: 1em;
	line-height: 1;
	opacity: 1;
	transition: all 0.1s ease 0.5s;
	visibility: visible;
}
[data-title]:after {
	content: attr(data-title);
	font-size: 1em !important;
	bottom: -1.6em;
	left: 100%;
	white-space: nowrap;
	opacity: 0;
	border-color: var(--color-border-darker);
	visibility: hidden;
}
.cool-ruler-left[data-title]:after,
.cool-ruler-right[data-title]:after {
	bottom: -2.8em;
	left: auto;
}
#vertical-ruler .cool-ruler-left[data-title]:after,
#vertical-ruler .cool-ruler-right[data-title]:after {
	bottom: 3em;
	left: auto;
	transform: rotate(-90deg);
}
[data-title] {
	position: relative;
}

.cool-annotation-caption {
	font-weight: bold;
}

.cool-bar {
	box-shadow: 0 1px 5px rgba(0,0,0,0.65);
	border-radius: var(--border-radius);
	display: inline-block;
	margin: 3px;
	vertical-align: middle;
}

.cool-bar a,
.cool-bar a:hover {
	background-color: var(--color-background-lighter);
	border-bottom: 1px solid var(--color-border);
	width: 30px;
	height: 30px;
	line-height: 30px;
	display: block;
	text-align: center;
	text-decoration: none;
	color: var(--color-main-text);
}

.cool-bar a:hover {
	background-color: var(--color-background-darker);
}

.cool-bar a:first-child {
	border-top-left-radius: var(--border-radius);
	border-top-right-radius: var(--border-radius);
}

.cool-bar a:last-child {
	border-bottom-left-radius: var(--border-radius);
	border-bottom-right-radius: var(--border-radius);
	border-bottom: none;
}

.cool-bar a.leaflet-disabled {
	cursor: default;
	background-color: var(--color-background-lighter);
	color: var(--color-text-lighter);
}

.cool-bar a {
	background-position: 50% 50%;
	background-repeat: no-repeat;
	display: block;
	width: 30px;
	height: 30px;
	line-height: 30px;
}

.cool-control-scroll-up,
.cool-control-scroll-down {
	font: bold 18px 'Lucida Console', Monaco, monospace;
	text-indent: 1px;
}

.lokdialog_container.lokdialog_notitle .ui-dialog-titlebar {
	display: none;
}

.ui-dialog-title {
	min-height: 1em;
	font-size: var(--header-font-size);
}

.lokdialog_container.ui-dialog.ui-widget-content {
	padding: 0px;
	width: auto;
	height: auto;
	border: none;
	background-color: transparent;
	z-index: 1105;
}

.lokdialog_container.ui-dialog.ui-widget-content.jsdialog-container,
.lokdialog_container .ui-dialog-titlebar.ui-widget-header {
	background: var(--color-main-background) !important;
}

.lokdialog.ui-dialog-content.ui-widget-content {
	overflow: auto;
	border-top-left-radius: 0px;
	border-top-right-radius: 0px;
	border-bottom-left-radius: var(--border-radius);
	border-bottom-right-radius: var(--border-radius);
}

#formulaautocompletePopup .lokdialog {
	padding: 0px;
}

.lokdialog.ui-dialog-content [Id$='Page'] {
	grid-column-gap: 24px;
}

.lokdialog_container:not(.jsdialog-container) .lokdialog.ui-dialog-content.ui-widget-content {
	padding: 0px;
}

.lokdialog_canvas {
	cursor: default;
	display: block; /* required to remove all borders around canvas element */
	caret-color: transparent; /* firefox shows a caret otherwise on top-left of the canvas */
	user-select: none;
	-moz-user-select: none;
	-khtml-user-select: none;
	-webkit-user-select: none;
	-o-user-select: none;
}

.lokblink {
	animation: lokblink 150ms infinite alternate;
}

@keyframes lokblink {
	from { opacity: 1; }
	to { opacity: 0; }
}

.form-field-frame {
	border: 1px solid;
	position: absolute;
	height: 100%;
	border-radius: var(--border-radius);
}

.form-field-button {
	background-color: var(--color-background-lighter);
	position: absolute;
	border: 1px solid;
	height: 100%;
	box-sizing: content-box;
	padding: 0px;
	border-radius: var(--border-radius);
}

.form-field-button:hover, .form-field-button:focus {
	background-color: var(--color-background-dark);
	outline: 0;
}

.form-field-button-image {
	margin: 3px;
}

.drop-down-field-list {
	position: absolute;
	border: 1px solid;
	cursor: pointer;
	background: var(--color-background-lighter);
}

.drop-down-field-list-item {
	width: calc(100% - 10px);
	padding-left: 5px;
	padding-right: 5px;
}

.drop-down-field-list-item.selected {
	background-color: var(--color-primary-lighter);
}
.drop-down-field-list-item:hover {
	background-color: var(--color-primary);
}

.hyperlink-popup .leaflet-popup-content {
	white-space: nowrap;
	margin: 6px 8px;
	font-size: 14px;
	line-height: 1;
	overflow: hidden;
}

.hyperlink-pop-up-container {
	padding: 6px;
	display: inline-block;
	line-height: 1;
	background-color: var(--color-background-lighter);
	width: 301px;
	overflow: visible !important;
}

.hyperlink-pop-up-container a {
	display: inline-block;
	white-space: nowrap;
	overflow: hidden;
	text-overflow: ellipsis;
	max-width: 188px;
	color: #0078A8;
	vertical-align: middle;
}

.hyperlink-popup-btn {
	display: inline-block;
	margin-left: 12px;
	vertical-align: middle;
	width: 26px;
	height: 26px;
}

.hyperlink-popup-btn:hover {
	background-color: var(--color-background-darker);
	border-radius: 50%;
}

#hyperlink-text-box:not(.mobile-wizard) {
	width: 100% !important;
	margin-bottom: 10px;
	resize: none;
	height: 32px;
	box-sizing: border-box;
}

.functiontooltip {
	white-space: nowrap;
	max-width: fit-content !important;
}
/* ... */

